--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require": {
         "php": "^7.4 || ^8.0",
-        "contao/core-bundle": "^4.9"
+        "contao/core-bundle": "^4.9 || ^5.0",
+        "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0"
     },
     "autoload": {
         "psr-4": {
