--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "issues": "https://github.com/heimrichhannot/contao-form-type-bundle/issues"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "contao/core-bundle": "^4.9 || ^5.0.8",
         "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
         "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0"
