--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,13 @@
     },
     "extra": {
         "contao-manager-plugin": "HeimrichHannot\\FormTypeBundle\\ContaoManager\\Plugin"
+    },
+    "require-dev": {
+        "rector/rector": "^2.2",
+        "contao/contao-rector": "dev-main",
+        "symplify/easy-coding-standard": "^13.0",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-symfony": "^2.0",
+        "contao/manager-plugin": "^2.13"
     }
 }
