--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": "^8.2",
         "contao/core-bundle": "^4.13 || ^5.2",
+        "symfony/security-core": "^5.4 || ^6.0 || ^7.0",
         "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
         "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0"
     },
